# CoCo

./: README.md  config.yaml  mediator.py  pyproject.toml  requirements.txt  test.py
backend/: backend.py  backend_fastapi.py  backend_fastmcp.py  gd_episode_david_cahn.txt  gd_episode_mike_knoop.txt  lukas_website.html  paa.py
frontend/: blog_defaults.txt  email_defaults.txt  frontend.py  gd_episode_mike_knoop.txt  mediator.py  merge.py  merge2.py  merge3.py
tests/: test_backend_minimal.py
