[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coco-mcp"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "CoCo - LM Mediator for Cursor"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "redis",
    "python-dotenv",
    "gradio",
    "fastapi",
    "uvicorn",
    "weave",
    "mcp[cli]>=1.1.2",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]
cli = [
    "mcp[cli]",
]

[project.scripts]
coco-mcp = "coco_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
